--- a/client/src/assests/styling/openAccount.css
+++ b/client/src/assests/styling/openAccount.css
@@ -34,7 +34,7 @@
 
 .label {
     width: 35%;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 700;
     margin-right: 2%;
 }
@@ -69,4 +69,10 @@
 }
 .KYCtext{
     text-align: left;
+}
+.errorMsg{
+    color: red;
+    width:95%;
+    text-align: right;
+    font-size: 14px;
 }
