--- a/client/src/assests/styling/Dashboard.css
+++ b/client/src/assests/styling/Dashboard.css
@@ -42,7 +42,7 @@
 }
 
 .transaction-content {
-    height: 60%;
+    height: 75%;
     font-weight: 600;
 }
 
@@ -53,28 +53,23 @@
 
 .financial-chart-period {
     border: 2px solid black;
-    height: 20px;
+    height: 30px;
     border-radius: 5px;
     width: 100px;
     text-align: center;
     margin: auto;
     display: flex;
     align-items: center;
-    text-align: right;
     margin-top: 0px;
-}
-
-.dropdown-icon {
-    width: 18px;
-    height: 16px;
-    border-radius: 5px;
-    margin: auto;
 }
 .graph-icons{
     margin-left: auto;
     margin-right:2%;
     width: 5%;
+    height: 100px;
     display:flex;
+    position: static;
+    z-index: 10;
     flex-direction: column;
     justify-content: center;
 }
