--- a/client/src/assests/styling/GetStartedPopUp.css
+++ b/client/src/assests/styling/GetStartedPopUp.css
@@ -1,30 +1,34 @@
-.main-box{
+.main-box {
     width: 30%;
     z-index: 1;
     width: 100%;
     position: absolute;
     height: 70%;
 }
-.content-box{
+
+.content-box {
     background-color: #EAEAEA;
     width: 30%;
     margin: auto;
-    height:100%;
+    height: 100%;
     border-radius: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-.GetStartedType{
+
+.GetStartedType {
     width: 70%;
     height: 20%;
     margin: auto;
 }
-.GetStartedTypeBtn{
-    width:100%;
+
+.GetStartedTypeBtn {
+    width: 100%;
     height: 100%;
     font-size: 28px;
     overflow: auto;
+    color: black;
 
 }
