--- a/client/src/assests/styling/header.css
+++ b/client/src/assests/styling/header.css
@@ -1,18 +1,45 @@
 @media screen and (max-width: 992px) {
-    #basic-navbar-nav{
+    #basic-navbar-nav {
         font-size: 20px;
     }
-    .contact-van-icon{
+
+    .contact-van-icon {
         width: 25%;
         float: left;
         margin-left: 0px !important;
     }
-    .search-nav-icon{
+
+    .search-nav-icon {
         width: 100% !important;
         margin-left: 0px !important;
         margin-top: 10px;
     }
-    a.nav-link{
+
+    a.nav-link {
         margin-left: 0 !important;
     }
+
+    .link {
+        text-decoration: none;
+        color: black;
+        transition: color 0.3s, transform 0.3s;
+        font-size: 16px;
+    }
+
+    .link:hover {
+        transform: scale(1.2);
+        color: black;
+    }
+}
+
+.link {
+    text-decoration: none;
+    color: black;
+    transition: color 0.3s, transform 0.3s;
+    font-size: 20px;
+}
+
+.link:hover {
+    transform: scale(1.2);
+    color: black;
 }
