--- a/client/src/assests/styling/openAccount.css
+++ b/client/src/assests/styling/openAccount.css
@@ -48,15 +48,17 @@
 }
 
 .nextbuttonform {
-    width: 100%;
-    height: 100px;
+    background-color: #48842c;
     display: flex;
-    justify-content: center;
+    border-radius: 10px;
+    border-color: #48842c;
     align-items: center;
 }
-.termsandcondition{
+
+.termsandcondition {
     margin-top: 8%;
 }
+
 .condition {
     display: flex;
     text-align: left;
@@ -64,15 +66,17 @@
     margin-top: 2%;
 }
 
-.condition input{
+.condition input {
     margin: auto;
 }
-.KYCtext{
+
+.KYCtext {
     text-align: left;
 }
-.errorMsg{
+
+.errorMsg {
     color: red;
-    width:95%;
+    width: 95%;
     text-align: right;
     font-size: 14px;
 }
